add rating module
